Update several ESLint config and plugin devDependencies in ui (#7142)
* Update several ESLint config and plugin devDependencies in ui

* Add commented out rule for upgraded config

* Disable arrow-body-style in apps/platform/.eslintrc.js

* Replace eslint disable comments with template literal work-around

* Disable rule and specify configurations separately in ui-components/.eslintrc.js

* Delete *.jsx from lint commands in ui-components/package.json

* Add string type cast

* Delete disable comment for TypeScript rule from JavaScript files

* Delete eslint disable comments

* Fix typo

* Delete type cast

* Add and update types devDependencies

* Remove types yup from devDependencies because update will include types

* Update types lodash and node devDependencies

--- a/ui/packages/ui-components/package.json
+++ b/ui/packages/ui-components/package.json
@@ -28,10 +28,10 @@
         "test": "JEST_JUNIT_UNIQUE_OUTPUT_NAME=true JEST_JUNIT_OUTPUT_DIR=${TEST_RESULTS_OUTPUT_DIR:-test-results}/reports jest --coverage --reporters=default --reporters=jest-junit",
         "test:watch": "jest --watch-all",
         "lint:non-src": "prettier --check '**/*.{md,css,json}'",
-        "lint:src": "eslint --ext .js,.jsx,.ts,.tsx ./",
+        "lint:src": "eslint --ext .js,.ts,.tsx ./",
         "lint": "npm-run-all lint:*",
         "lint-fix:non-src": "prettier --write '**/*.{md,css,json}'",
-        "lint-fix:src": "eslint --fix --ext .js,.jsx,.ts,.tsx ./",
+        "lint-fix:src": "eslint --fix --ext .js,.ts,.tsx ./",
         "lint-fix": "npm-run-all lint-fix:*",
         "prepublishOnly": "yarn clean && yarn build",
         "prestorybook": "[ -d ../../node_modules/@storybook/addon-docs ] || ln -sf ../../packages/ui-components/node_modules/@storybook/addon-docs ../../node_modules/@storybook/addon-docs; [ -d ../../node_modules/@storybook/addon-essentials ] || ln -sf ../../packages/ui-components/node_modules/@storybook/addon-essentials ../../node_modules/@storybook/addon-essentials",
@@ -59,8 +59,8 @@
         "@storybook/react": "6.1.10",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^10.4.9",
-        "@types/lodash": "^4.14.165",
-        "@types/node": "^14.14.12",
+        "@types/lodash": "^4.14.166",
+        "@types/node": "^14.14.16",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "@typescript-eslint/eslint-plugin": "^2.24.0",
@@ -71,13 +71,13 @@
         "eslint-config-prettier": "6.11.0",
         "eslint-plugin-eslint-comments": "^3.2.0",
         "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jest": "^23.20.0",
+        "eslint-plugin-jest": "^24.1.3",
         "eslint-plugin-jest-dom": "^2.1.0",
-        "eslint-plugin-jsx-a11y": "6.2.3",
-        "eslint-plugin-prettier": "^3.1.3",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-prettier": "^3.3.0",
         "eslint-plugin-react": "^7.20.0",
         "eslint-plugin-react-hooks": "^3.0.0",
-        "eslint-plugin-testing-library": "^3.1.4",
+        "eslint-plugin-testing-library": "3.8.0",
         "jest": "^24.9.0",
         "jest-junit": "^10.0.0",
         "npm-run-all": "^4.1.5",
