--- a/ui/apps/platform/package.json
+++ b/ui/apps/platform/package.json
@@ -129,25 +129,28 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^9.1.4",
         "@testing-library/react-hooks": "^3.4.2",
-        "@types/jest": "^26.0.18",
-        "@types/lodash": "^4.14.165",
-        "@types/node": "^14.14.12",
+        "@types/jest": "^26.0.19",
+        "@types/lodash": "^4.14.166",
+        "@types/node": "^14.14.16",
+        "@types/pluralize": "^0.0.29",
+        "@types/qs": "^6.9.5",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
+        "@types/react-redux": "^7.1.3",
         "cypress": "^5.0.0",
         "cypress-file-upload": "^4.1.1",
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.1.0",
         "eslint-config-airbnb-typescript": "^7.2.1",
         "eslint-config-prettier": "6.11.0",
-        "eslint-plugin-cypress": "2.11.1",
+        "eslint-plugin-cypress": "^2.11.2",
         "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jest": "^23.20.0",
-        "eslint-plugin-jsx-a11y": "6.2.3",
-        "eslint-plugin-prettier": "^3.1.3",
+        "eslint-plugin-jest": "^24.1.3",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-prettier": "^3.3.0",
         "eslint-plugin-react": "^7.20.0",
         "eslint-plugin-react-hooks": "^3.0.0",
-        "eslint-plugin-testing-library": "^3.1.4",
+        "eslint-plugin-testing-library": "3.8.0",
         "http-proxy-middleware": "^1.0.6",
         "istanbul-lib-coverage": "^3.0.0",
         "jest-junit": "^10.0.0",
