ROX-6109: Send updated cluster config to Central for Helm-managed clusters (#7198)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2173,6 +2173,7 @@ jobs:
       - AUTH0_SUPPORT: false
       - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
+      - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
     steps:
       - checkout
 
@@ -3264,7 +3265,6 @@ jobs:
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_DISCOVERED_AT_IMAGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
-      - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
 
     steps:
@@ -3296,7 +3296,6 @@ jobs:
       - ROX_DISCOVERED_AT_IMAGE: true
       - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
-      - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
 
     steps:
@@ -3333,7 +3332,6 @@ jobs:
       - ROX_HOST_SCANNING: true
       - ROX_DISCOVERED_AT_IMAGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
-      - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
 
 
@@ -3372,7 +3370,6 @@ jobs:
       - ROX_HOST_SCANNING: true
       - ROX_DISCOVERED_AT_IMAGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
-      - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
 
     steps:
@@ -3917,7 +3914,6 @@ jobs:
       - ROX_HOST_SCANNING: true
       - ROX_DISCOVERED_AT_IMAGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
-      - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
 
     steps:
@@ -3946,7 +3942,6 @@ jobs:
       - ROX_HOST_SCANNING: true
       - ROX_DISCOVERED_AT_IMAGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
-      - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
 
     steps:
@@ -3972,7 +3967,6 @@ jobs:
       - ROX_HOST_SCANNING: true
       - ROX_DISCOVERED_AT_IMAGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
-      - ROX_NETWORK_DETECTION: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
 
     steps:
@@ -4067,6 +4061,7 @@ jobs:
       - ADMISSION_CONTROLLER: true
       - ADMISSION_CONTROLLER_UPDATES: true
       - ROX_NETWORK_DETECTION: true
+      - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
       - ROX_NETWORK_BASELINE_OBSERVATION_PERIOD: 2m
 
     steps:
