--- a/image/templates/helm/stackrox-secured-cluster/templates/admission-controller-secret.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/admission-controller-secret.yaml
@@ -1,22 +1,34 @@
 {{- include "srox.init" . -}}
 
-{{- if and ._rox.admissionControl.enable (ne ._rox.ca._cert "") (ne ._rox.admissionControl.serviceTLS._cert "") (ne ._rox.admissionControl.serviceTLS._key "") }}
+{{- if ._rox.admissionControl.enable }}
+
+{{- if or ._rox.createSecrets (and (kindIs "invalid" ._rox.createSecrets) (or ._rox.admissionControl.serviceTLS._cert ._rox.admissionControl.serviceTLS._key)) }}
+
+{{- if not (and ._rox.ca._cert ._rox.admissionControl.serviceTLS._cert ._rox.admissionControl.serviceTLS._key) }}
+  {{ include "srox.fail" "Requested secret creation, but not all of CA certificate, admission control certificate, admission control private key are available. Set the 'createSecrets' config option to false if you do not want secrets to be created." }}
+{{- end }}
+
 apiVersion: v1
 kind: Secret
-data:
-  ca.pem: |
-    {{- ._rox.ca._cert | b64enc | nindent 4 }}
-  admission-control-cert.pem: |
-    {{- ._rox.admissionControl.serviceTLS._cert | b64enc | nindent 4 }}
-  admission-control-key.pem: |
-    {{- ._rox.admissionControl.serviceTLS._key | b64enc | nindent 4 }}
 metadata:
+  name: admission-control-tls
+  namespace: {{ ._rox._namespace }}
   labels:
     {{- include "srox.labels" (list . "secret" "admission-control-tls") | nindent 4 }}
     auto-upgrade.stackrox.io/component: sensor
   annotations:
     {{- include "srox.annotations" (list . "secret" "admission-control-tls") | nindent 4 }}
-  name: admission-control-tls
-  namespace: {{ .Release.Namespace }}
+    "helm.sh/hook": "pre-install,pre-upgrade"
+    "helm.sh/resource-policy": "keep"
 type: Opaque
+stringData:
+  ca.pem: |
+    {{- ._rox.ca._cert | nindent 4 }}
+  admission-control-cert.pem: |
+    {{- ._rox.admissionControl.serviceTLS._cert | nindent 4 }}
+  admission-control-key.pem: |
+    {{- ._rox.admissionControl.serviceTLS._key | nindent 4 }}
+
+{{- end }}
+
 {{- end }}
