--- a/image/templates/helm/stackrox-secured-cluster/templates/additional-ca-sensor.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/additional-ca-sensor.yaml
@@ -1,19 +1,19 @@
 {{- include "srox.init" . -}}
 
-{{- if ._rox.additionalCAs }}
+{{- if ._rox._additionalCAs }}
 apiVersion: v1
-data:
-  {{- range $name, $cert := ._rox.additionalCAs }}
-  {{ $name | quote }}: |
-    {{- $cert | b64enc | nindent 4 }}
-  {{- end }}
 kind: Secret
 metadata:
+  name: additional-ca-sensor
+  namespace: {{ ._rox._namespace }}
   labels:
     {{- include "srox.labels" (list . "secret" "additional-ca-sensor") | nindent 4 }}
   annotations:
     {{- include "srox.annotations" (list . "secret" "additional-ca-sensor") | nindent 4 }}
-  name: additional-ca-sensor
-  namespace: {{ .Release.Namespace }}
 type: Opaque
+stringData:
+  {{- range $name, $cert := ._rox._additionalCAs }}
+  {{ $name | quote }}: |
+    {{- $cert | nindent 4 }}
+  {{- end }}
 {{- end }}
