--- a/image/templates/helm/stackrox-secured-cluster/templates/collector-netpol.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/collector-netpol.yaml
@@ -1,11 +1,29 @@
 {{- include "srox.init" . -}}
 
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: collector-no-ingress
+  namespace: {{ ._rox._namespace }}
+  labels:
+    {{- include "srox.labels" (list . "networkpolicy" "collector-no-ingress") | nindent 4 }}
+    auto-upgrade.stackrox.io/component: "sensor"
+  annotations:
+    {{- include "srox.annotations" (list . "networkpolicy" "collector-no-ingress") | nindent 4 }}
+spec:
+  podSelector:
+    matchLabels:
+      app: collector
+  policyTypes:
+    - Ingress
+
 {{ if ._rox.collector.exposeMonitoring }}
+---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: collector-monitoring
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ ._rox._namespace }}
   labels:
     {{- include "srox.labels" (list . "networkpolicy" "collector-monitoring") | nindent 4 }}
     auto-upgrade.stackrox.io/component: "sensor"
