--- a/image/templates/helm/stackrox-secured-cluster/templates/sensor-netpol.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/sensor-netpol.yaml
@@ -4,7 +4,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: sensor
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ ._rox._namespace }}
   labels:
     {{- include "srox.labels" (list . "networkpolicy" "sensor") | nindent 4 }}
     auto-upgrade.stackrox.io/component: "sensor"
@@ -25,8 +25,7 @@ spec:
     ports:
     - port: 8443
       protocol: TCP
-  - from:
-    ports:
+  - ports:
     - port: 9443
       protocol: TCP
   podSelector:
@@ -34,30 +33,14 @@ spec:
       app: sensor
   policyTypes:
     - Ingress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: collector-no-ingress
-  namespace: {{ .Release.Namespace }}
-  labels:
-    {{- include "srox.labels" (list . "networkpolicy" "collector-no-ingress") | nindent 4 }}
-    auto-upgrade.stackrox.io/component: "sensor"
-  annotations:
-    {{- include "srox.annotations" (list . "networkpolicy" "collector-no-ingress") | nindent 4 }}
-spec:
-  podSelector:
-    matchLabels:
-      app: collector
-  policyTypes:
-    - Ingress
+
 {{ if ._rox.sensor.exposeMonitoring }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: sensor-monitoring
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ ._rox._namespace }}
   labels:
     {{- include "srox.labels" (list . "networkpolicy" "sensor-monitoring") | nindent 4 }}
     auto-upgrade.stackrox.io/component: "sensor"
