--- a/image/templates/helm/stackrox-secured-cluster/templates/upgrader-serviceaccount.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/upgrader-serviceaccount.yaml
@@ -1,11 +1,12 @@
 {{- include "srox.init" . -}}
 
 {{- if ._rox.createUpgraderServiceAccount }}
+
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: sensor-upgrader
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ ._rox._namespace }}
   labels:
     {{- include "srox.labels" (list . "serviceaccount" "sensor-upgrader") | nindent 4 }}
   annotations:
@@ -26,9 +27,10 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: sensor-upgrader
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ ._rox._namespace }}
 roleRef:
   kind: ClusterRole
   name: cluster-admin
   apiGroup: rbac.authorization.k8s.io
+
 {{- end }}
