--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1114,6 +1114,8 @@ commands:
           name: Remove all the existing StackRox resources (they can exist when Circle restarts a container)
           command: |
             kubectl -n stackrox delete cm,deploy,ds,networkpolicy,secret,svc,serviceaccount,validatingwebhookconfiguration,pv,pvc,clusterrole,clusterrolebinding,role,rolebinding,psp -l "app.kubernetes.io/name=stackrox" --wait || true
+            # openshift specific:
+            kubectl -n stackrox delete SecurityContextConstraints -l "app.kubernetes.io/name=stackrox" --wait || true
             kubectl delete -R -f scripts/ci/psp --wait || true
             kubectl delete ns stackrox --wait || true
             helm uninstall monitoring || true
