ROX-6261: Adjust UI e2e tests for network detection (#7236)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3292,7 +3292,7 @@ jobs:
       - ROX_CENTRAL_INSTALLATION_EXPERIENCE: true
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_SENSOR_TLS_CHALLENGE: true
-      - ROX_NETWORK_DETECTION: false
+      - ROX_NETWORK_DETECTION: true
       - ROX_HOST_SCANNING: true
       - ROX_DISCOVERED_AT_IMAGE: true
       - ROX_SENSOR_INSTALLATION_EXPERIENCE: true
